Refine Carbon modal `allow_overflow` styling to ensure visible overflow handling for modal body.

--- a/src/sass/carbon.scss
+++ b/src/sass/carbon.scss
@@ -119,3 +119,9 @@ cds-popover {
 cds-modal[open][allow_overflow]::part(dialog) {
   overflow: visible;
 }
+
+cds-modal[open][allow_overflow] {
+  cds-modal-body {
+    overflow: visible;
+  }
+}
